# FIT-VUT

./: README.md
1BITL/IMA/1/: DU_pyco.tex
1BITL/IMA/2/: tex.tex
1BITL/INC/: fsm.vhd
1BITL/IOS/1/: dirstat
1BITL/IOS/2/: Makefile  proj2.c
1BITL/IZG/Projekt/: student.c  student.h
1BITZ/IEL/: main.tex  xurban66.docx
1BITZ/IZP/1/: proj1.c
1BITZ/IZP/2/: proj2.c
1BITZ/IZP/3/: proj3.c
1BITZ/IZP/4/: proj3.h
2BITL/: ftrest.cpp  ftrestd.cpp
2BITL/IDS/1/: ER BT.xml  ER Bug (1) (2).xml  (+1 more)
2BITL/IPK/: trace.c
2BITZ/IFJ/: CMakeLists.txt  Makefile  README.md  dynamic_stack.c  dynamic_stack.h  error.c  error.h  hodnoceni  ial.c  ial.h  instruction_list.c  instruction_list.h  instructions.h  interpret-expr-test.c  interpret-fib.c  interpret-relation-test.c  interpret-str-test.c  interpret.c  interpret.h  op-parser.c  op-parser.h  parser.c  parser.h  scanner-unit.c  scanner.c  scanner.h  stable-test.c  stack.c  stack.h  str.c  str.h  str_test.c  test_parser.sh
2BITZ/IFJ/doc/: IFJ 2016.mup  LL grammar.txt  dokumentace.docx  op_table.txt  prezentacia.pptx  todo.txt
2BITZ/ISS/: xurban66.m
3BITZ/IIS/: .env  README.md  db.sql  db1.sql  doc.html
3BITZ/IMP/: .cproject  .cwGeneratedFileSetLog  MK60DN512xxx10_flash.ld
3BITZ/IMS/: .gitignore  Makefile  constants.h  counters.cpp  counters.h  debug.h  line.cpp  line.h  main.cpp  params.h  screws.cpp  screws.h  stats.cpp  stats.h  test.txt
3BITZ/ISA/: CMakeLists.txt  Makefile  README.md  isamon.c  isamon.cpp  isamon.h
bruteforce1/: oneconvo.pcap  onestream.txt  sshbruteforce.csv
bruteforce2/: bruteforce2.csv
(+185 files in other folders)
